fixed grid gap issue,-it was a missing semi colon

--- a/products/static/products/css/products.css
+++ b/products/static/products/css/products.css
@@ -6,7 +6,7 @@
   /*border: solid red 1px;*/
   display: grid;
   grid-template-columns: repeat(3,1fr);
-  gap: 10px
+  gap: 10px;
   background-color: #eee;
  }
 .product-card{
